# habitos

./: .gitignore  CHANGELOG.md  Cargo.toml  HOMEBREW.md  LICENSE  PRD.md  README.md  ROADMAP.md  screencast.md
.claude/agents/: llm-integrator.md  product-overseer.md  rust-engineer.md  schema-designer.md
.github/ISSUE_TEMPLATE/: feedback.yml
.github/workflows/: release.yml
habitos-ai/: Cargo.toml
habitos-ai/prompts/: ask.md  coach.md  plan.md  reflect_summary.md  review_week.md
habitos-ai/src/: anthropic.rs  lib.rs  ollama.rs  openai_compatible.rs  prompts.rs
habitos-cli/: Cargo.toml
habitos-cli/src/: cli.rs  main.rs
habitos-cli/src/tui/: app.rs  mod.rs  theme.rs  ui.rs
habitos-core/: Cargo.toml
habitos-core/migrations/: 0001_init.sql  0002_ai_memory_embeddings.sql  0003_skills.sql
habitos-core/src/: capture.rs  clock.rs  config.rs  db.rs  error.rs  events.rs  export.rs  focus.rs  goals.rs  habits.rs  heatmap.rs  journal.rs  lib.rs  memory.rs  milestones.rs  reports.rs  reviews.rs  skills.rs
launch/: show-hn.md
