[package]
name = "habitos-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "habitos"
path = "src/main.rs"

[dependencies]
habitos-core = { path = "../habitos-core" }
habitos-ai = { path = "../habitos-ai" }
anyhow.workspace = true
clap.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tempfile = "3"
ratatui = "0.29"
crossterm = "0.28"
