[package]
name = "habitos-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
time.workspace = true
sqlx.workspace = true
directories.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
